--- a/config/voices.kokoro.yml
+++ b/config/voices.kokoro.yml
@@ -4,52 +4,66 @@ personas:
     variants:
       normal:
         hi:
-          hm_omega: 1.3
-          am_puck: 1.0
-          voice: "af_alloy"
+          params:
+            hm_omega: 1.3
+            am_puck: 1.0
+          voice: "hm_omega"
         en:
-          hm_puck: 1.0
-          hm_omega: 0.8
-          voice: "af_alloy"
+          params:
+            am_puck: 1.0
+            hm_omega: 0.8
+          voice: "am_puck"
       alt2:
         hi:
-          hm_omega: 1.3
-          am_micheal: 1.0
-          voice: "af_alloy"
+          params:
+            hm_omega: 1.3
+            am_michael: 1.0
+          voice: "hm_omega"
         en:
-          am_micheal: 1.0
-          hm_puck: 1.0
-          voice: "af_alloy"
+          params:
+            am_michael: 1.0
+            hm_omega: 0.8
+          voice: "am_michael"
       special_weird:
         any:
-          voice: "Pm_alex"
+          voice: "pm_alex"
+
   female:
     default_variant: normal
     variants:
       normal:
         hi:
-          hf_alpha: -1.2
-          af_sky: 0.7
-          voice: "af_sky"
+          params:
+            hf_alpha: 1.2
+            af_sky: 0.7
+          voice: "hf_alpha"
         en:
-          hf_alpha: 0.4
-          af_sky: 1.0
+          params:
+            hf_alpha: 0.4
+            af_sky: 1.0
           voice: "af_sky"
       alt2:
         hi:
-          hf_alpha: -1.2
-          af_aoede: 0.7
-          voice: "af_aoede"
+          params:
+            hf_alpha: -1.2
+            af_aoede: 0.7
+          voice: "hf_alpha"
         en:
-          hf_alpha: 0.4
-          af_aoede: 1.0
+          params:
+            hf_alpha: 0.4
+            af_aoede: 1.0
           voice: "af_aoede"
       special_weird:
         any:
-          voice: "Pf_Dora"
+          voice: "pf_dora"
+      anime:
+        any:
+          voice: "jf_alpha"
+
 routing:
   camera_events:
     see_blackie:
       persona: female
-      variant: special_weird
+      variant: anime
+      voice_override: "jf_alpha"
       line: "blackieee"
