--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ OLLAMA_HOST=http://localhost:11434
 GEMINI_API_KEY=
 GEMINI_COMPLEX_API_KEY=
 GEMINI_MODEL=gemini-2.5-pro
+MAX_GEMINI_DAILY_USD=
 WAKEWORD_ENGINE=porcupine
 # TODO: change back to 'creo' when the new wake-word model is ready
 WAKEWORD_KEYWORD=jarvis
