feat(core): add full productivity suite + planner orchestration
Highlights:
• Added calendar, tasks, reminders, planner, meeting, sensors, and router-mode tools (registered via register_productivity_tools).
• Extended policies with planner defaults and router budgeting.
• Orchestrator now intercepts quick commands (plan day, meeting prep, reminders, mode switch, snooze) and runs a background 3-min planner loop via new clock helper.
• Runtime auto-registers tools and attaches router mode control.
• UI gains live planner panel with 'What’s next' timeline, privacy note, and local mode buttons.
• Added tests for planner composition, reminder scheduling, and router-mode switching.

--- a/config/voices.kokoro.yml
+++ b/config/voices.kokoro.yml
@@ -45,7 +45,7 @@ personas:
       alt2:
         hi:
           params:
-            hf_alpha: -1.2
+            hf_alpha: 1.2
             af_aoede: 0.7
           voice: "hf_alpha"
         en:
@@ -58,12 +58,11 @@ personas:
           voice: "pf_dora"
       anime:
         any:
-          voice: "jf_alpha"
+          voice: "jf_tebukuro"
 
 routing:
   camera_events:
     see_blackie:
       persona: female
       variant: anime
-      voice_override: "jf_alpha"
       line: "blackieee"
